After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705398 - gtype: Fix typo in g_type_class_add_private() error message
gtype: Fix typo in g_type_class_add_private() error message
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gobject
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-08-03 11:22 UTC by Emanuele Aina
Modified: 2013-08-04 08:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtype: Fix typo in g_type_class_add_private() error message (908 bytes, patch)
2013-08-03 11:22 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2013-08-03 11:22:47 UTC
The error message printed on multiple calls to g_type_class_add_private()
improperly calls it g_type_add_private().
Comment 1 Emanuele Aina 2013-08-03 11:22:50 UTC
Created attachment 250762 [details] [review]
gtype: Fix typo in g_type_class_add_private() error message
Comment 2 Colin Walters 2013-08-03 12:19:57 UTC
Review of attachment 250762 [details] [review]:

Looks good.
Comment 3 Colin Walters 2013-08-03 12:19:59 UTC
Review of attachment 250762 [details] [review]:

Looks good.
Comment 4 Emanuele Aina 2013-08-04 08:52:33 UTC
Pushed as https://git.gnome.org/browse/glib/commit/?id=66233f1d1