gtype: Fix typo in g_type_class_add_private() error message

https://bugzilla.gnome.org/show_bug.cgi?id=705398